--- a/MovieQuiz/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/MovieQuiz/Resources/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="VIV-bT-zDr">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="VIV-bT-zDr">
                                 <rect key="frame" x="-281" y="0.0" width="976" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="VIV-bT-zDr" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="2J4-GV-IAO"/>
+                            <constraint firstItem="VIV-bT-zDr" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" constant="281" id="TDh-Gw-Ddr"/>
+                            <constraint firstAttribute="leading" secondItem="VIV-bT-zDr" secondAttribute="leading" constant="281" id="eVh-OK-kNW"/>
+                            <constraint firstAttribute="top" secondItem="VIV-bT-zDr" secondAttribute="top" id="pPc-rv-Zpq"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
